feat: add .gitignore, backend security & auth overhaul, DTOs, services, migrations
- Add comprehensive .gitignore (exclude target/, logs/, node_modules/)
- Remove tracked build artifacts from git cache
- Add dual-token auth system (JWT access + refresh token)
- Add Redis config & token blacklist service
- Add Cloudinary config & upload service
- Add rate limiting filter (Bucket4j)
- Add Admin controllers (user, order, custom order)
- Add Product, Order, CustomOrder, Discount controllers & services
- Add GlobalExceptionHandler & CustomBusinessException
- Add DTOs: Login, Register, Product, Order, CustomOrder, Discount, User
- Add DB migrations V4-V7 (custom order status, refresh tokens, discount fields, passwords)
- Update SecurityConfig, entities (User, CustomOrder, Discount, RefreshToken)
- Add project docs: Zzz/, plan/ directories
- Add start-backend.ps1 script